--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
                     </ul>
             </nav>
             <main>
-
                 <section id="pierwsza-sekcja">
-                    <h2 class="article__header" class="article__header" class="naglowek2">Kto to?</h2>
+                    <h2 class="article__header  " >Kto to?</h2>
                     <p class="article__paragraph article__paragraph--highlighted">
                         <b>Ronaldinho Gaúcho</b>, brazylijski piłkarz, który grał zazwyczaj na pozycji pomocnika lub
                         napastnika,
@@ -60,7 +59,7 @@
                 </section>
 
                 <section id="druga-sekcja">
-                    <h2 class="article__header" class="naglowek2">Początki</h2>
+                    <h2 class="article__header  ">Początki</h2>
 
                     <p class="article__paragraph">
                         <b>Ronaldinho</b><i>(Ronaldo de Assis Moreira)</i>, urodził się <strong>21 marca 1980
@@ -82,44 +81,44 @@
                 </section>
 
                 <section id="trzecia-sekcja">
-                    <h2 class="article__header" class="naglowek2">W jakich klubach grał Ronaldinho w Europie?</h2>
-                    <h3 class="naglowek3">Paris Saint-Germain</h3>
+                    <h2 class="article__header  ">W jakich klubach grał Ronaldinho w Europie?</h2>
+                    <h3 class="article__element">Paris Saint-Germain</h3>
                     <p class="article__paragraph">
                         2001-2003
                     </p>
-                    <h3 class="naglowek3">FC Barcelona</h3>
+                    <h3 class="article__element">FC Barcelona</h3>
                     <p class="article__paragraph">
                         2003-2008
                     </p>
-                    <h3 class="naglowek3">AC Milan</h3>
+                    <h3 class="article__element">AC Milan</h3>
                     <p class="article__paragraph">
                         2008-2011
                     </p>
                 </section>
 
                 <section id="czwarta-sekcja">
-                    <h2 class="article__header" class="naglowek2">Osiągnięcia w Europie</h2>
-                    <h3 class="naglowek3">Paris Saint-Germain</h3>
+                    <h2 class="article__header  " >Osiągnięcia w Europie</h2>
+                    <h3 class="article__element">Paris Saint-Germain</h3>
                     <p class="article__paragraph">
                         Puchar Intertoto UEFA: 2001
                     </p>
-                    <h3 class="naglowek3">FC Barcelona</h3>
+                    <h3 class="article__element">FC Barcelona</h3>
                     <p class="article__paragraph">
                         Mistrzostwo Hiszpanii: 2004/2005, 2005/2006 <br> Superpuchar Hiszpanii: 2005, 2006 <br> Liga
                         Mistrzów:
                         2005/2006
                     </p>
-                    <h3 class="naglowek3">AC Milan</h3>
+                    <h3 class="article__element">AC Milan</h3>
                     <p class="article__paragraph">
                         Serie A: 2010/2011
                     </p>
                 </section>
 
                 <section id="piata-sekcja">
-                    <h2 class="article__header" class="naglowek2">Statystyki w klubach</h2>
+                    <h2 class="article__header  ">Statystyki w klubach</h2>
 
                     <table class="table">
-                        <caption><b>Występy w europejskich klubach</b></caption>
+                        <caption class="table__legend"><b>Występy w europejskich klubach</b></caption>
                         <tr class="tableRow">
                             <th class="tableCell tableHeader" scope="col">Klub</th>
                             <th class="tableCell tableHeader" scope="col">Sezony</th>
