Just for practice

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </nav>
             <main>
                 <section id="pierwsza-sekcja">
-                    <h2 class="article__header  " >Kto to?</h2>
+                    <h2 class="article__header  ">Kto to?</h2>
                     <p class="article__paragraph article__paragraph--highlighted">
                         <b>Ronaldinho Gaúcho</b>, brazylijski piłkarz, który grał zazwyczaj na pozycji pomocnika lub
                         napastnika,
@@ -55,6 +55,9 @@
                         (100
                         najlepszych
                         żyjących piłkarzy w historii)
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates rerum numquam laboriosam hic
+                        architecto enim excepturi obcaecati quo optio id, quaerat corrupti vero, sequi libero!
+                        Aspernatur minima in cum quas.
                     </p>
                 </section>
 
@@ -97,7 +100,7 @@
                 </section>
 
                 <section id="czwarta-sekcja">
-                    <h2 class="article__header  " >Osiągnięcia w Europie</h2>
+                    <h2 class="article__header  ">Osiągnięcia w Europie</h2>
                     <h3 class="article__element">Paris Saint-Germain</h3>
                     <p class="article__paragraph">
                         Puchar Intertoto UEFA: 2001
