--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ronaldinho</title>
     <meta property="og:image" content="images/logo.png">
+    <link rel="icon" href="images/logo.png">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/article.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
